# conway-s-gol

./: .clang-format  .gitignore  LICENSE  meson.build
src/: main.cpp  mappings.hpp  type_aliases.hpp
subprojects/: .gitignore
